# dumb-lamp-diy-esp32

./: .gitignore  README.md  workbench-lamp-esphome.yaml
math/: README.md  led-fitting.ipynb  pyproject.toml
