[tool.poetry]
name = "some_math"
version = "0.1.0"
description = ""
authors = ["wenop <wenoptics@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
notebook = "^6.4.12"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
